<resources>
    <string name="app_name">DireHospitality</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="solicitar_una_nueva_cita">Solicitar una nueva cita</string>
    <string name="acceder">Acceder</string>
    <string name="he_olvidado_la_contrase_a">He olvidado la contraseña</string>
    <string name="registrarme">Registrarme</string>
    <string name="contrase_a">Contraseña</string>
    <string name="minuto">Minuto</string>
    <string name="introduzca_su_direcci_n_de_correo_electr_nico_para_resetear_su_contrase_a_en_el_caso_de_no_encontrarlo_revise_la_bandeja_de_spam">Introduzca su dirección de correo electrónico para resetear su contraseña, en el caso de no encontrarlo revise la bandeja de SPAM.</string>
    <string name="medicina_general">Medicina General</string>
    <string name="analisis_cl_nicos">Analisis Clínicos</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="especialidad">Especialidad</string>
</resources>