<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevaCita">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="onClickCancelarOperacion">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="196dp"
            android:text="Fecha cita"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/especialidad"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fechaCita"
            android:layout_width="316dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="228dp"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="312dp"
            android:text="Hora"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_marginTop="312dp"
            android:text="@string/minuto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/horaCita"
            android:layout_width="54dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="340dp"
            android:ems="10"
            android:inputType="numberSigned"
            android:text="00"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/minutoCita"
            android:layout_width="54dp"
            android:layout_height="48dp"
            android:layout_marginStart="156dp"
            android:layout_marginTop="340dp"
            android:ems="10"
            android:inputType="numberSigned"
            android:text="00"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonConfirmarCita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="548dp"
            android:onClick="onClickEnviarCita"
            android:text="@string/confirmar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonCancelarCita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="236dp"
            android:layout_marginTop="548dp"
            android:text="@string/cancelar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:layout_width="335dp"
            android:layout_height="111dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" >

            <RadioButton
                android:id="@+id/radioMedGene"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medicina_general" />

            <RadioButton
                android:id="@+id/radioAnalisis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/analisis_cl_nicos" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>